Just make a simple landing page

--- a/static/css/landing-page.css
+++ b/static/css/landing-page.css
@@ -26,12 +26,17 @@ h6 {
     font-weight: 400;
 }
 
+a {
+	color: white;
+}
+
 .intro-header {
     padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
     padding-bottom: 50px;
     text-align: center;
     color: #f8f8f8;
-    background: url(../img/intro-bg.jpg) no-repeat center center;
+/*    background: url(../img/intro-bg.jpg) no-repeat center center;*/
+    background: black;
     background-size: cover;
 }
 
@@ -164,3 +169,6 @@ footer {
 p.copyright {
     margin: 15px 0 0;
 }
+
+
+
